# pure_pursuit

./: Cargo.toml  Cargo.toml.bak  README.md
examples/: simulated_pd_holonomic.rs
src/: lib.rs  prelude.rs
src/api/: mod.rs
src/api/paths/: dynamic_pursuer.rs  mod.rs  path_target_finder.rs  pathematics.rs  static_pursuer.rs  waypoint.rs
