[package]
name = "pure_pursuit"
version = "0.1.0"
edition = "2021"
description = "An implementation of generic Pure Pursuit in no_std Rust"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.2"
num = "0.4.0"
array-concat = "0.5.1"

[dev-dependencies]
libc-print = "0.1.17"