[package]
name = "pure_pursuit"
version = "0.1.2"
edition = "2021"
description = "An implementation of generic Pure Pursuit in no_std Rust"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.2"

[dependencies.num]
version = "0.4.0"
default-features = false
features = ["libm"]

[dev-dependencies]
libc-print = "0.1.17"